--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17"
-  },
   "name": "machineri.com",
   "version": "1.0.0",
-  "main": "tailwind.config.js",
+  "description": "",
+  "main": "api/contact.js",
+  "scripts": {
+    "start": "node api/contact.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "ansi-regex": "^6.1.0",
     "ansi-styles": "^6.2.1",
@@ -15,6 +17,7 @@
     "arg": "^5.0.2",
     "balanced-match": "^1.0.2",
     "binary-extensions": "^2.3.0",
+    "body-parser": "^1.20.3",
     "brace-expansion": "^2.0.1",
     "braces": "^3.0.3",
     "browserslist": "^4.24.3",
@@ -24,14 +27,19 @@
     "color-convert": "^2.0.1",
     "color-name": "^1.1.4",
     "commander": "^4.1.1",
+    "cors": "^2.8.5",
     "cross-spawn": "^7.0.6",
     "cssesc": "^3.0.0",
+    "cssnano": "^7.0.6",
     "didyoumean": "^1.2.2",
     "dlv": "^1.1.3",
+    "dotenv": "^16.4.7",
     "eastasianwidth": "^0.2.0",
     "electron-to-chromium": "^1.5.76",
     "emoji-regex": "^9.2.2",
     "escalade": "^3.2.0",
+    "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "fast-glob": "^3.3.2",
     "fastq": "^1.18.0",
     "fill-range": "^7.1.1",
@@ -41,6 +49,7 @@
     "glob": "^10.4.5",
     "glob-parent": "^6.0.2",
     "hasown": "^2.0.2",
+    "helmet": "^8.0.0",
     "is-binary-path": "^2.1.0",
     "is-core-module": "^2.16.1",
     "is-extglob": "^2.1.1",
@@ -60,6 +69,7 @@
     "mz": "^2.7.0",
     "nanoid": "^3.3.8",
     "node-releases": "^2.0.19",
+    "nodemailer": "^6.9.16",
     "normalize-path": "^3.0.0",
     "normalize-range": "^0.1.2",
     "object-assign": "^4.1.1",
@@ -98,18 +108,18 @@
     "thenify-all": "^1.6.0",
     "to-regex-range": "^5.0.1",
     "ts-interface-checker": "^0.1.13",
+    "uglify-js": "^3.19.3",
     "update-browserslist-db": "^1.1.1",
     "util-deprecate": "^1.0.2",
     "which": "^2.0.2",
+    "winston": "^3.17.0",
     "wrap-ansi": "^8.1.0",
     "wrap-ansi-cjs": "^7.0.0",
     "yaml": "^2.7.0"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
+  }
 }
